--- a/ils-google-analytics/example.html
+++ b/ils-google-analytics/example.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <title>Google Analytics example</title>
+        <title>Google Analytics Web Component example</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="google-analytics.js"></script>
     </head>
-    <div id="ils-google-analytics" data-ils-measurement="G-PM8CEXKVE6"></div>
     <body>
+        <ils-google-analytics measurement="G-PM8CEXKVE6"></ils-google-analytics>
         <h1>Testing Google Analytics</h1>
     </body>
 </html>
