adding unformatted status

--- a/ils-status/example.html
+++ b/ils-status/example.html
@@ -15,5 +15,8 @@
         <h1>Testing status widget</h1>
         <div class="ils-status"></div>
         </div>
+
+        <div class="ils-status"></div>
+
     </body>
 </html>
