Quick fix for toggle

--- a/ils-input/index3.html
+++ b/ils-input/index3.html
@@ -201,7 +201,7 @@
             <div class="ils-input-entry-compact">
                 <label for="toggle-checkbox">Toggle Checkbox </label>
                 <div class="ils-toggle-slider">
-                    <input id="toggle-checkbox" type="checkbox"><span></span>
+                    <input id="toggle-checkbox" type="checkbox" role="switch"><span><span class="container"></span><span aria-hidden="true" class="text-on">On</span><span aria-hidden="true" class="text-off">Off</span></span>
                 </div>
             </div>
         </div>
